<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        android:key="rules"
        android:summary="@string/prefs_rules_long"
        android:title="@string/prefs_rules"
        app:iconSpaceReserved="false" >
    </PreferenceScreen>

    <PreferenceScreen
        android:key="rate_review"
        android:summary="@string/prefs_rate_review_long"
        android:title="@string/prefs_rate_review"
        app:iconSpaceReserved="false" >
    </PreferenceScreen>

    <PreferenceScreen
        android:summary="@string/prefs_donation_long"
        android:title="@string/prefs_donation"
        android:key="donate"
        app:iconSpaceReserved="false" >
    </PreferenceScreen>

    <PreferenceScreen
        android:key="about"
        android:summary="@string/copyright_string"
        android:title="@string/about_freebloks"
        app:iconSpaceReserved="false" >
    </PreferenceScreen>

</PreferenceScreen>