<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="sounds"
        android:persistent="true"
        android:summary="@string/prefs_sounds_long"
        android:title="@string/prefs_sounds"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vibrate"
        android:persistent="true"
        android:summary="@string/prefs_vibrate_long"
        android:title="@string/prefs_vibrate"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="snap_aid"
        android:persistent="true"
        android:summary="@string/prefs_snap_to_corners_long"
        android:title="@string/prefs_snap_to_corners"
        app:iconSpaceReserved="false" />

</PreferenceScreen>