<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_seeds"
        android:persistent="true"
        android:summary="@string/prefs_show_corners_long"
        android:title="@string/prefs_show_corners"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="show_opponents"
        android:persistent="true"
        android:summary="@string/prefs_show_opponents_long"
        android:title="@string/prefs_show_opponents"
        app:iconSpaceReserved="false" />

    <ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/prefs_show_animations"
        android:entries="@array/prefs_animations_labels"
        android:entryValues="@array/prefs_animations_values"
        android:key="animations"
        android:persistent="true"
        android:title="@string/prefs_show_animations"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

    <de.saschahlusiak.freebloks.preferences.types.ThemePreference
        android:defaultValue="texture_wood"
        android:dialogTitle="@string/prefs_theme"
        android:key="theme"
        android:persistent="true"
        android:title="@string/prefs_theme"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false" />

</PreferenceScreen>