<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:fitsSystemWindows="true"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.55"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding">

        <ImageView
            android:id="@+id/donate_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/donate_black"
            app:tint="?colorOnBackground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingBottom="8dp"
            android:text="@string/donation_text_long"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:gravity="center_horizontal"
            android:linksClickable="true"
            android:text="@string/github_link"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="0.45"
        android:clipChildren="false"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_padding"
        android:paddingRight="@dimen/activity_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/donation_text_short"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="8dp">

            <RadioButton
                android:id="@+id/donation_none"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_nothing"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/donation_freebloksvip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_freebloksvip"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioButton
                android:id="@+id/donation_paypal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/donation_paypal"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:id="@+id/next"
            android:layout_width="200dp"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_gravity="center"
            android:text="@string/donation_next"
            android:textSize="@dimen/textSizeLarge" />
    </LinearLayout>

</LinearLayout>