<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/main_menu_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_menu_button_margin"
        android:padding="0dp">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="@dimen/main_menu_app_icon_size"
            android:layout_height="@dimen/main_menu_app_icon_size"
            android:layout_gravity="center_vertical"
            android:padding="2dp"
            android:src="@drawable/appicon_small" />

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.Medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingLeft="4dp"
            android:paddingRight="2dp"
            android:text="@string/app_name"
            android:textColor="?android:attr/textColorSecondary" />

        <ImageButton
            android:id="@+id/sound_toggle_button"
            style="?materialButtonStyle"
            android:layout_width="@dimen/main_menu_button_height"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="0"
            tools:src="@drawable/ic_volume_up" />

        <ImageButton
            android:id="@+id/rules"
            style="?materialButtonStyle"
            android:layout_width="@dimen/main_menu_button_height"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="@dimen/main_menu_button_margin"
            android:layout_weight="0"
            android:src="@drawable/ic_help" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_menu_button_margin">

        <Button
            android:id="@+id/new_game"
            android:layout_width="0dp"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_weight="1"
            android:text="@string/new_local_game"
            android:textSize="@dimen/textSizeMedium" />

        <ImageButton
            android:id="@+id/new_game_custom"
            style="?materialButtonStyle"
            android:layout_width="@dimen/main_menu_button_height"
            android:layout_height="@dimen/main_menu_button_height"
            android:layout_marginLeft="@dimen/main_menu_button_margin"
            android:layout_weight="0"
            android:src="@drawable/ic_gears" />

    </LinearLayout>

    <Button
        android:id="@+id/resume_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_button_height"
        android:layout_marginBottom="@dimen/main_menu_button_margin"
        android:minWidth="@dimen/main_menu_width"
        android:text="@string/resume"
        android:textSize="@dimen/textSizeMedium" />

    <Button
        android:id="@+id/join_game"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_button_height"
        android:layout_marginBottom="@dimen/main_menu_button_margin"
        android:minWidth="@dimen/main_menu_width"
        android:text="@string/multiplayer"
        android:textSize="@dimen/textSizeMedium" />

    <Button
        android:id="@+id/preferences"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_menu_button_height"
        android:text="@string/preferences"
        android:textSize="@dimen/textSizeMedium" />

</LinearLayout>